--- a/custom/auterion.qrc
+++ b/custom/auterion.qrc
@@ -32,31 +32,23 @@
         <file alias="AuterionRCRSSIIndicator.qml">res/MainToolbar/AuterionRCRSSIIndicator.qml</file>
     </qresource>
     <qresource prefix="/auterion/img">
-        <file alias="attitude_crosshair.svg">res/images/attitude_crosshair.svg</file>
-        <file alias="attitude_dial.svg">res/images/attitude_dial.svg</file>
-        <file alias="attitude_pointer.svg">res/images/attitude_pointer.svg</file>
         <file alias="camera_photo.svg">res/images/camera_photo.svg</file>
         <file alias="camera_settings.svg">res/images/camera_settings.svg</file>
-        <file alias="camera_switch_elapsed_mode.svg">res/images/camera_switch_elapsed_mode.svg</file>
         <file alias="camera_video.svg">res/images/camera_video.svg</file>
-        <file alias="chevron_right.svg">res/images/chevron_right.svg</file>
-        <file alias="compass_dial.svg">res/images/compass_dial.svg</file>
+        <file alias="chronometer.svg">res/images/chronometer.svg</file>
         <file alias="compass_pointer.svg">res/images/compass_pointer.svg</file>
         <file alias="drop_down.svg">res/images/drop_down.svg</file>
-        <file alias="gimbal_icon.svg">res/images/gimbal_icon.svg</file>
-        <file alias="gimbal_pitch.svg">res/images/gimbal_pitch.svg</file>
-        <file alias="gimbal_position.svg">res/images/gimbal_position.svg</file>
-        <file alias="label_left_edge.svg">res/images/label_left_edge.svg</file>
+        <file alias="distance.svg">res/images/distance.svg</file>
+        <file alias="altitude.svg">res/images/altitude.svg</file>
+        <file alias="horizontal_speed.svg">res/images/horizontal_speed.svg</file>
+        <file alias="vertical_speed.svg">res/images/vertical_speed.svg</file>
         <file alias="label_right_edge.svg">res/images/label_right_edge.svg</file>
         <file alias="menu_battery.svg">res/images/menu_battery.svg</file>
         <file alias="menu_dropdown.svg">res/images/menu_dropdown.svg</file>
-        <file alias="menu_flight.svg">res/images/menu_flight.svg</file>
-        <file alias="menu_gear.svg">res/images/menu_gear.svg</file>
         <file alias="menu_gps.svg">res/images/menu_gps.svg</file>
         <file alias="menu_left_edge.svg">res/images/menu_left_edge.svg</file>
         <file alias="menu_logo.svg">res/images/menu_logo.svg</file>
         <file alias="menu_logo_advanced.svg">res/images/menu_logo_advanced.svg</file>
-        <file alias="menu_plan.svg">res/images/menu_plan.svg</file>
         <file alias="menu_rc.svg">res/images/menu_rc.svg</file>
         <file alias="menu_signal_0.svg">res/images/menu_signal_0.svg</file>
         <file alias="menu_signal_100.svg">res/images/menu_signal_100.svg</file>
@@ -65,6 +57,7 @@
         <file alias="menu_signal_75.svg">res/images/menu_signal_75.svg</file>
         <file alias="messages.svg">res/images/messages.svg</file>
         <file alias="microSD.svg">res/images/microSD.svg</file>
+        <file alias="odometer.svg">res/images/odometer.svg</file>
         <file alias="plan.svg">res/images/plan.svg</file>
         <file alias="settings.svg">res/images/settings.svg</file>
         <file alias="sliders.svg">res/images/sliders.svg</file>
@@ -73,10 +66,7 @@
         <file alias="void.png">res/images/void.png</file>
     </qresource>
     <qresource prefix="/Auterion/Widgets">
-        <file alias="Auterion/Widgets/AuterionArtificialHorizon.qml">res/Auterion/Widgets/AuterionArtificialHorizon.qml</file>
-        <file alias="Auterion/Widgets/AuterionAttitudeWidget.qml">res/Auterion/Widgets/AuterionAttitudeWidget.qml</file>
         <file alias="Auterion/Widgets/AuterionComboBox.qml">res/Auterion/Widgets/AuterionComboBox.qml</file>
-        <file alias="Auterion/Widgets/AuterionCompassRing.qml">res/Auterion/Widgets/AuterionCompassRing.qml</file>
         <file alias="Auterion/Widgets/AuterionFactCombo.qml">res/Auterion/Widgets/AuterionFactCombo.qml</file>
         <file alias="Auterion/Widgets/AuterionLabel.qml">res/Auterion/Widgets/AuterionLabel.qml</file>
         <file alias="Auterion/Widgets/AuterionSignalStrength.qml">res/Auterion/Widgets/AuterionSignalStrength.qml</file>
