--- a/custom/auterion.qrc
+++ b/custom/auterion.qrc
@@ -17,6 +17,8 @@
         <file alias="ZoomPlus.svg">res/ToolStrip/ZoomPlus.svg</file>
         <file alias="ZoomMinus.svg">res/ToolStrip/ZoomMinus.svg</file>
         <file alias="check.svg">res/ToolStrip/check.svg</file>
+        <file alias="PaperPlane.svg">res/ToolStrip/FlyView.svg</file>
+        <file alias="Plan.svg">res/ToolStrip/PlanView.svg</file>
     </qresource>
     <qresource prefix="/auterion">
         <file alias="AuterionArmedIndicator.qml">res/MainToolbar/AuterionArmedIndicator.qml</file>
