--- a/custom/auterion.qrc
+++ b/custom/auterion.qrc
@@ -43,6 +43,8 @@
         <file alias="camera_settings.svg">res/images/camera_settings.svg</file>
         <file alias="camera_video.svg">res/images/camera_video.svg</file>
         <file alias="chronometer.svg">res/images/chronometer.svg</file>
+        <file alias="compass.svg">res/images/compass.svg</file>
+        <file alias="compass_needle.svg">res/images/compass_needle.svg</file>
         <file alias="compass_pointer.svg">res/images/compass_pointer.svg</file>
         <file alias="drop_down.svg">res/images/drop_down.svg</file>
         <file alias="distance.svg">res/images/distance.svg</file>
