--- a/custom/auterion.qrc
+++ b/custom/auterion.qrc
@@ -39,6 +39,9 @@
         <file alias="BarcodeReader.qml">res/BarcodeReader.qml</file>
     </qresource>
     <qresource prefix="/auterion/img">
+        <file alias="attitude_crosshair.svg">res/images/attitude_crosshair.svg</file>
+        <file alias="attitude_dial.svg">res/images/attitude_dial.svg</file>
+        <file alias="attitude_pointer.svg">res/images/attitude_pointer.svg</file>
         <file alias="camera_photo.svg">res/images/camera_photo.svg</file>
         <file alias="camera_settings.svg">res/images/camera_settings.svg</file>
         <file alias="camera_video.svg">res/images/camera_video.svg</file>
@@ -74,15 +77,17 @@
         <file alias="vehicle_settings.svg">res/images/vehicle_settings.svg</file>
         <file alias="void.png">res/images/void.png</file>
     </qresource>
-    <qresource prefix="/Auterion/Widgets">
+    <qresource prefix="Auterion/Widgets">
+        <file alias="Auterion/Widgets/AuterionArtificialHorizon.qml">res/Auterion/Widgets/AuterionArtificialHorizon.qml</file>
+        <file alias="Auterion/Widgets/AuterionAttitudeWidget.qml">res/Auterion/Widgets/AuterionAttitudeWidget.qml</file>
         <file alias="Auterion/Widgets/AuterionComboBox.qml">res/Auterion/Widgets/AuterionComboBox.qml</file>
         <file alias="Auterion/Widgets/AuterionFactCombo.qml">res/Auterion/Widgets/AuterionFactCombo.qml</file>
+        <file alias="Auterion/Widgets/AuterionIconButton.qml">res/Auterion/Widgets/AuterionIconButton.qml</file>
         <file alias="Auterion/Widgets/AuterionLabel.qml">res/Auterion/Widgets/AuterionLabel.qml</file>
         <file alias="Auterion/Widgets/AuterionSignalStrength.qml">res/Auterion/Widgets/AuterionSignalStrength.qml</file>
         <file alias="Auterion/Widgets/AuterionTextBackground.qml">res/Auterion/Widgets/AuterionTextBackground.qml</file>
         <file alias="Auterion/Widgets/AuterionToolBarButton.qml">res/Auterion/Widgets/AuterionToolBarButton.qml</file>
         <file alias="Auterion/Widgets/AuterionVehicleButton.qml">res/Auterion/Widgets/AuterionVehicleButton.qml</file>
-        <file alias="Auterion/Widgets/AuterionIconButton.qml">res/Auterion/Widgets/AuterionIconButton.qml</file>
         <file alias="Auterion/Widgets/OnOffSwitch.qml">res/Auterion/Widgets/OnOffSwitch.qml</file>
         <file alias="Auterion/Widgets/qmldir">res/Auterion/Widgets/qmldir</file>
     </qresource>
