--- a/custom/auterion.qrc
+++ b/custom/auterion.qrc
@@ -39,9 +39,11 @@
         <file alias="BarcodeReader.qml">res/BarcodeReader.qml</file>
     </qresource>
     <qresource prefix="/auterion/img">
+        <file alias="altitude.svg">res/images/altitude.svg</file>
         <file alias="attitude_crosshair.svg">res/images/attitude_crosshair.svg</file>
         <file alias="attitude_dial.svg">res/images/attitude_dial.svg</file>
         <file alias="attitude_pointer.svg">res/images/attitude_pointer.svg</file>
+        <file alias="button_arrow_left.svg">res/images/button_arrow_left.svg</file>
         <file alias="camera_photo.svg">res/images/camera_photo.svg</file>
         <file alias="camera_settings.svg">res/images/camera_settings.svg</file>
         <file alias="camera_video.svg">res/images/camera_video.svg</file>
@@ -49,11 +51,11 @@
         <file alias="compass.svg">res/images/compass.svg</file>
         <file alias="compass_needle.svg">res/images/compass_needle.svg</file>
         <file alias="compass_pointer.svg">res/images/compass_pointer.svg</file>
-        <file alias="drop_down.svg">res/images/drop_down.svg</file>
         <file alias="distance.svg">res/images/distance.svg</file>
-        <file alias="altitude.svg">res/images/altitude.svg</file>
+        <file alias="drop_down.svg">res/images/drop_down.svg</file>
+        <file alias="ev_icon.svg">res/images/ev_icon.svg</file>
+        <file alias="gimbal_icon.svg">res/images/gimbal_icon.svg</file>
         <file alias="horizontal_speed.svg">res/images/horizontal_speed.svg</file>
-        <file alias="vertical_speed.svg">res/images/vertical_speed.svg</file>
         <file alias="label_right_edge.svg">res/images/label_right_edge.svg</file>
         <file alias="menu_battery.svg">res/images/menu_battery.svg</file>
         <file alias="menu_dropdown.svg">res/images/menu_dropdown.svg</file>
@@ -75,11 +77,14 @@
         <file alias="sliders.svg">res/images/sliders.svg</file>
         <file alias="vehicle.svg">res/images/vehicle.svg</file>
         <file alias="vehicle_settings.svg">res/images/vehicle_settings.svg</file>
+        <file alias="vertical_speed.svg">res/images/vertical_speed.svg</file>
         <file alias="void.png">res/images/void.png</file>
+        <file alias="zoom_icon.svg">res/images/zoom_icon.svg</file>
     </qresource>
     <qresource prefix="Auterion/Widgets">
         <file alias="Auterion/Widgets/AuterionArtificialHorizon.qml">res/Auterion/Widgets/AuterionArtificialHorizon.qml</file>
         <file alias="Auterion/Widgets/AuterionAttitudeWidget.qml">res/Auterion/Widgets/AuterionAttitudeWidget.qml</file>
+        <file alias="Auterion/Widgets/AuterionCameraQuickSettingButton.qml">res/Auterion/Widgets/AuterionCameraQuickSettingButton.qml</file>
         <file alias="Auterion/Widgets/AuterionComboBox.qml">res/Auterion/Widgets/AuterionComboBox.qml</file>
         <file alias="Auterion/Widgets/AuterionFactCombo.qml">res/Auterion/Widgets/AuterionFactCombo.qml</file>
         <file alias="Auterion/Widgets/AuterionIconButton.qml">res/Auterion/Widgets/AuterionIconButton.qml</file>
