--- a/custom-example/custom.qrc
+++ b/custom-example/custom.qrc
@@ -10,6 +10,7 @@
         <file alias="CustomModeIndicator.qml">res/MainToolbar/CustomModeIndicator.qml</file>
         <file alias="CustomMultiVehicleSelector.qml">res/MainToolbar/CustomMultiVehicleSelector.qml</file>
         <file alias="CustomRCRSSIIndicator.qml">res/MainToolbar/CustomRCRSSIIndicator.qml</file>
+        <file alias="PreFlightCheckList.qml">res/PreFlightCheckList.qml</file>
     </qresource>
     <qresource prefix="custom/img">
         <file alias="altitude.svg">res/Images/altitude.svg</file>
