--- a/custom/auterion.qrc
+++ b/custom/auterion.qrc
@@ -37,6 +37,7 @@
         <file alias="AuterionMultiVehicleSelector.qml">res/MainToolbar/AuterionMultiVehicleSelector.qml</file>
         <file alias="AuterionRCRSSIIndicator.qml">res/MainToolbar/AuterionRCRSSIIndicator.qml</file>
         <file alias="BarcodeReader.qml">res/BarcodeReader.qml</file>
+        <file alias="PreFlightCheckList.qml">res/PreFlightCheckList.qml</file>
     </qresource>
     <qresource prefix="/auterion/img">
         <file alias="altitude.svg">res/images/altitude.svg</file>
