--- a/qgcimages.qrc
+++ b/qgcimages.qrc
@@ -66,11 +66,11 @@
         <file alias="CameraTrigger.svg">src/AutoPilotPlugins/PX4/Images/CameraTrigger.svg</file>
         <file alias="check.svg">resources/check.svg</file>
         <file alias="checkbox-check.svg">src/QmlControls/checkbox-check.svg</file>
+        <file alias="cOGPointer.svg">src/FlightMap/Images/cOGPointer.svg</file>
         <file alias="CogWheel.svg">src/MissionManager/CogWheel.svg</file>
+        <file alias="compassDottedLine.svg">src/FlightMap/Images/compassDottedLine.svg</file>
         <file alias="compassInstrumentArrow.svg">src/FlightMap/Images/compassInstrumentArrow.svg</file>
         <file alias="compassInstrumentDial.svg">src/FlightMap/Images/compassInstrumentDial.svg</file>
-        <file alias="compassDottedLine.svg">src/FlightMap/Images/compassDottedLine.svg</file>
-        <file alias="cOGPointer.svg">src/FlightMap/Images/cOGPointer.svg</file>
         <file alias="Connect.svg">src/ui/toolbar/Images/Connect.svg</file>
         <file alias="crossHair.svg">src/FlightMap/Images/crossHair.svg</file>
         <file alias="DatalinkLoss.svg">src/AutoPilotPlugins/PX4/Images/DatalinkLoss.svg</file>
@@ -121,6 +121,10 @@
         <file alias="no-logging-light.svg">src/AutoPilotPlugins/PX4/Images/no-logging-light.svg</file>
         <file alias="no-logging.svg">src/AutoPilotPlugins/PX4/Images/no-logging.svg</file>
         <file alias="ObjectAvoidance.svg">src/AutoPilotPlugins/PX4/Images/ObjectAvoidance.svg</file>
+        <file alias="PairingButton.svg">src/PairingManager/Images/PairingButton.svg</file>
+        <file alias="PairingConnected.svg">src/PairingManager/Images/PairingConnected.svg</file>
+        <file alias="PairingError.svg">src/PairingManager/Images/PairingError.svg</file>
+        <file alias="PairingIcon.svg">src/PairingManager/Images/PairingIcon.svg</file>
         <file alias="PaperPlane.svg">src/ui/toolbar/Images/PaperPlane.svg</file>
         <file alias="PiP.svg">src/FlightMap/Images/PiP.svg</file>
         <file alias="pipHide.svg">src/FlightMap/Images/pipHide.svg</file>
@@ -181,9 +185,5 @@
         <file alias="Yield.svg">src/ui/toolbar/Images/Yield.svg</file>
         <file alias="ZoomMinus.svg">src/FlightMap/Images/ZoomMinus.svg</file>
         <file alias="ZoomPlus.svg">src/FlightMap/Images/ZoomPlus.svg</file>
-
-        <file alias="PairingIcon.svg">src/PairingManager/Images/PairingIcon.svg</file>
-        <file alias="PairingIconLight.svg">src/PairingManager/Images/PairingIconLight.svg</file>
-
     </qresource>
 </RCC>
